samples/_failures_safe/1761225951_b44ca0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8aaab2d1.c: In function ‘main’:
./samples/SAFE/__tmp_8aaab2d1.c:165:12: error: expected ‘)’ at end of input
  165 |     if (len
      |        ~   ^
      |            )
./samples/SAFE/__tmp_8aaab2d1.c:165:5: error: expected declaration or statement at end of input
  165 |     if (len
      |     ^~
